- Build - add bin/perlito5 to script_files section, add dist_abstract

9.008 cpan:Perlito5   2015-11-04
- Makefile - add bin/perlito5 to EXE_FILES section
- add LICENSE.md
- Perl5-to-Javascript compiler:
-- default "print" function tries harder to find a native print
-- fixed context in readline() - that is, "$x = <$fh>" vs. "@x = <$fh>"

9.007 cpan:Perlito5   2015-10-30
- add Build.PL

9.006 cpan:Perlito5   2015-10-30
* Perlito5 (Perl 5 compiler):
- fix handling of native data parameters

9.004 cpan:Perlito5   2015-10-30
* Perlito5 (Perl 5 compiler):
- fix CPAN files  [rt.cpan.org #108111]
- main Java class is "Main"
- fix Perl5 emitter $/ variable

9.003 cpan:Perlito5   2015-10-21
* Perlito5 (Perl 5 compiler):
- fix CPAN index

9.002 cpan:Perlito5   2015-10-21
* Perlito5 (Perl 5 compiler):
- fix CPAN index

9.001 cpan:Perlito5   2015-10-21
* Perlito5 (Perl 5 compiler):
- command line: -Cast-json
- fix CPAN distro

9.000 cpan:Perlito5   2015-10-20
* Perlito5 (Perl 5 compiler):
- first CPAN distro


dev  2015-08-17

* Perlito5 (Perl 5 compiler):

- more than 1700 tests

- Parser:
-- emit the same error messages as 'perl' in more places
-- expanded support for prototypes, regex, v-strings
-- track variable redeclarations and variable scopes
-- add the variable type to AST nodes ("real sigil")
-- "Perlito5X" namespace re-implements CPAN modules that are not possible (or not easy)
   to support directly in Perlito - such as Data::Dumper.
   Some modules are inlined in the parser - such as "vars" and "constant".
-- add "<<>>" (Perl 5.22)
-- support for "__LINE__", "__FILE__", and tracking the current line number
-- more pod implementation details, such as "=encoding"
-- fix return value for if/unless modifiers
-- command line - implement "-n", "-p", "-M", "-m", fixed "-I"
-- use a smaller grammar-grammar
-- use a faster calling convention in grammar
-- shorter AST node names

- Perl5-to-Javascript compiler:
-- file operators (nodejs)