@@ -129,7 +129,7 @@ our $CORE_PROTO = {
           'CORE::rand' => ';$',
           'CORE::gmtime' => ';$',
           'CORE::gethostbyname' => '$',
-          'CORE::each' => '\\[@%]',
+          'CORE::each' => '+',
           'CORE::ref' => '_',
           'CORE::syswrite' => '*$;$$',
           'CORE::msgctl' => '$$$',
@@ -222,7 +222,7 @@ our $CORE_PROTO = {
           'CORE::msgrcv' => '$$$$$',
           'CORE::setsockopt' => '*$$$',
           'CORE::int' => '_',
-          'CORE::pop' => ';\\@',
+          'CORE::pop' => ';+',
           'CORE::link' => '$$',
           'CORE::exec' => undef,
           'CORE::setpwent' => '',
@@ -245,13 +245,13 @@ our $CORE_PROTO = {
           'CORE::ucfirst' => '_',
           'CORE::chdir' => ';$',
           'CORE::setnetent' => '$',
-          'CORE::splice' => '\\@;$$@',
+          'CORE::splice' => '+;$$@',
           'CORE::unlink' => '@',
           'CORE::time' => '',
-          'CORE::push' => '\\@@',
+          'CORE::push' => '+@',
           'CORE::exit' => ';$',
           'CORE::endgrent' => '',
-          'CORE::unshift' => '\\@@',
+          'CORE::unshift' => '+@',
           'CORE::local' => undef,
           'CORE::my' => undef,
           'CORE::cos' => '_',
@@ -300,7 +300,7 @@ our $CORE_PROTO = {
           'CORE::chmod' => '@',
           'CORE::prototype' => undef,
           'CORE::getprotobynumber' => '$',
-          'CORE::values' => '\\[@%]',
+          'CORE::values' => '+',
           'CORE::chomp' => '_',     # original 'undef',
           'CORE::ioctl' => '*$$',
           'CORE::eof' => ';*',
@@ -318,7 +318,7 @@ our $CORE_PROTO = {
           'CORE::endhostent' => '',
           'CORE::getpgrp' => ';$',
           'CORE::setgrent' => '',
-          'CORE::keys' => '\\[@%]',
+          'CORE::keys' => '+',
           'CORE::glob' => undef,
           'CORE::getpriority' => '$$',
           'CORE::reset' => ';$',
@@ -327,7 +327,7 @@ our $CORE_PROTO = {
           'CORE::next' => undef,
           'CORE::getgrgid' => '$',
           'CORE::default' => undef,
-          'CORE::shift' => ';\\@',
+          'CORE::shift' => ';+',
           'CORE::symlink' => '$$',
           'CORE::exists' => '$',      # original 'undef',
           'CORE::printf' => '$@',      # original 'undef',
