@@ -1,4 +1,9 @@
+
 - Build - add bin/perlito5 to script_files section, add dist_abstract
+- Parser:
+-- update CORE prototypes to Perl v5.22 - use (+) instead of (\\[@%])
+- Perl5-to-Javascript compiler:
+-- implement (+) prototype
 
 9.008 cpan:Perlito5   2015-11-04
 - Makefile - add bin/perlito5 to EXE_FILES section
